--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
       <li class="seconds"></li>
     </ul>
 
-    <!-- <script type="module" src="./js/01-prototype.js"></script> -->
+    <script type="module" src="./js/01-prototype.js"></script>
     <!-- <script type="module" src="./js/02-class.js"></script> -->
-    <script type="module" src="./js/03-inheritance.js"></script>
+    <!-- <script type="module" src="./js/03-inheritance.js"></script> -->
   </body>
 </html>
