--- a/pages/06-templating.html
+++ b/pages/06-templating.html
@@ -59,7 +59,12 @@
     <section class="gallery">
       <div class="container">
         <h1 class="js-title">Gallery</h1>
-        <ul class="gallery js-gallery"></ul>
+        <ul class="gallery js-gallery">
+          <li>item-1</li>
+          <li>item-2</li>
+          <li>item-3</li>
+          <li>item-4</li>
+        </ul>
       </div>
     </section>
 
